--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "start": "node __sapper__/build"
   },
   "dependencies": {
-    "api.js": "^0.0.5",
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "compression": "^1.7.1",
+    "express-session": "^1.18.0",
     "jquery": "^3.7.1",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.7.0",
     "polka": "next",
     "rollup-plugin-copy": "^3.5.0",
-    "sirv": "^1.0.0",
-    "utils.js": "^1.0.1"
+    "session-file-store": "^1.5.0",
+    "sirv": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
